--- a/webhook/ingress.yaml
+++ b/webhook/ingress.yaml
@@ -5,7 +5,7 @@ kind: Ingress
 metadata:
   name: tekton-webhook
   annotations:
-    kubernetes.io/ingress.class: public
+    kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-issuer
   labels:
     app: tekton-webhook
